# ArtBastard-DMX512

./: .gitattributes  .gitignore  .npmignore  .npmrc  .tsbuildinfo  2D_CANVAS_KONVA_REFACTOR_COMPLETE.md  2D_CANVAS_REPLACEMENT_COMPLETE.md  AUTOMATION-SCENES-ENHANCEMENT-COMPLETE.md  AUTOPILOT-DMX-IMPLEMENTATION-COMPLETE.md  AUTOPILOT-RECORDING-FIXES-COMPLETE.html  AUTOPILOT-SCENE-FINAL-REPORT.md  AUTOPILOT-SCENE-IMPLEMENTATION-COMPLETE.md  AUTOPILOT-TRACK-IMPLEMENTATION-COMPLETE.md  AUTOPILOT-VISUAL-DMX-FIX-COMPLETE.md  AUTOPILOT_FIXES_COMPLETE.md  AUTOSCENE_FIXES.md  AUTO_SAVE_RESTORE.md  AUTO_SCENE_IMPLEMENTATION_SUMMARY.md  BUILD-FIX-COMPLETE.md  CHANGELOG.md  CLEANUP-FAST.ps1  CLEANUP.ps1  CLEANUP.sh  CLEANUP_ENHANCEMENT_SUMMARY.md  COLOR_AUTO_FIX_COMPLETE.md  COMPARISON_WORKING_VS_BROKEN.md  COMPREHENSIVE-PROFESSIONAL-CONTROLS-COMPLETE.md  CUSTOM_PATH_EDITOR_COMPLETE.md  DEBUG_PAGE_GUIDE.md  DEV.md  DISCOVERY_MODE_REMOVAL.md  DMX Address Allocation Plan.md  DMX-ADDRESS-MAPPING-FIX-SUMMARY.md  DMX-DIP-SIMULATOR-ENHANCED-COMPLETE.md  DMX-DIP-SIMULATOR-IMPLEMENTATION-COMPLETE.md  DMX-FILTERED-SELECTION-ENHANCEMENT-COMPLETE.md  DMX-SELECTED-CHANNELS-TOUCH-IMPLEMENTATION-COMPLETE.html  DMX-SUPERCONTROL-DEBUG-IMPLEMENTATION-COMPLETE.md  DMX-TOUCH-CONTROL-FIXES-COMPLETE.md  DMX-TOUCH-CONTROL-IMPLEMENTATION-COMPLETE.md  (+190 more)
.agent/notes/: scene-gallery-inline-edit-plan.md  scene-issues-summary.md  supercontrol-progress.md  supercontrol-scene-fix-status.md
.github/prompts/: plan-fixtureLibraryDevelopment.prompt.md
.github/workflows/: ci.yml  deploy-website.yml  release.yml  test.yml
DOCS/: DEMO_RECORDING.txt  FEATURES.md  FIXTURES.md  HISTORY.md  INSTALL.md  MODULAR_AUTOMATION.md  README.md  SCENE_AUTOMATION_INTEGRATION.md  SCENE_MIDI_OSC_SYSTEM.md  UI_UX_TOUR.txt  USAGE.md
DOCS/media/2026-02-27/: ASSETS.txt
archive/: README.md
archive/html/: DMX-SUPERCONTROL-DEBUG-VALIDATION.html  DMX-TOUCH-CONTROL-TEST.html  DMX-TOUCH-CONTROL-VALIDATION.html  PAN-TILT-FIXTURE-SELECTION-ENHANCEMENT-COMPLETE.html  autopilot-debug-validation.html  autopilot-track-feature-test.html  autopilot-track-test-guide.html  autopilot-visual-dmx-fix-test-guide.html  autoplay-fix-test-guide.html  dmx-address-mapping-validation.html  dmx-filtered-selection-test.html  dmx-node-editor-ui-fix-test-guide.html  enhanced-fixture-creation-test.html  external-monitor-test.html  pan-tilt-autopilot-tracking-fix-test-guide.html  super-control-enhancement-test.html  super-controller-dmx-test.html  supercontrol-midi-learn-test.html  test-master-fader-compact.html  test-master-fader-layout.html  validate-master-fader-fixes.html
archive/json/: el1000rgb-laser-sample.json  sample-fixtures.json
archive/scripts/: LAUNCH-COMPLETE-TOUCH-TESTS.ps1  LAUNCH-TOUCH-TESTS.ps1  TEST-DMX-TOUCH-SIMPLE.ps1
artbastard-nextjs-frontend/: next.config.mjs  package.json
artbastard-nextjs-frontend/app/: layout.tsx  page.tsx
artbastard-nextjs-frontend/app/components/: SocketProvider.tsx
artbastard-nextjs-frontend/app/dmx/: DMXPage.module.scss  page.tsx
artbastard-nextjs-frontend/app/fixtures/: FixturesPage.module.scss  page.tsx
artbastard-nextjs-frontend/app/store/: dmxStore.ts  socketStore.ts
data/: config.json  default-config.json  fixtures.json  last-state-backup-1759814166988.json  last-state-backup-1759814518871.json  last-state-backup-1759814606568.json  last-state-backup-1759814769372.json  last-state-backup-1759814952445.json  last-state-backup-1759815023082.json  last-state-backup-1759815061506.json  last-state-backup-1759815678521.json  last-state-backup-1759816169578.json  last-state-backup-1760258262972.json  last-state-backup-1760259014140.json  last-state-backup-1760262199599.json  last-state-backup-1760310477475.json  last-state-backup-1760311328475.json  last-state-backup-1760313025058.json  last-state-backup-1760313732726.json  last-state-backup-1760316812007.json  last-state-backup-1760317485204.json  last-state-backup-1760318021478.json  last-state-backup-1760318757187.json  last-state-backup-1760319806734.json  last-state-backup-1760320031759.json  last-state-backup-1760320420524.json  last-state-backup-1760320999694.json  last-state-backup-1760322662890.json  last-state-backup-1760327713655.json  last-state-backup-1760328254539.json  last-state-backup-1760331294481.json  last-state-backup-1760332488391.json  last-state-backup-1760335671918.json  last-state-backup-1760336431902.json  last-state-backup-1760337146149.json  last-state-backup-1760337722086.json  last-state-backup-1760338343065.json  last-state-backup-1760339088666.json  last-state-backup-1760339467534.json  last-state-backup-1760343336743.json  (+30 more)
docs/: API.md  ARCHITECTURE.md  PROGRESS_SUMMARY.md
electron/: main.js  package.json  preload.js
face-tracker/: .gitignore  BUILD_FIXED.md  BUILD_STATUS_REPORT.md  CMakeLists.txt  Cargo.toml  EXPOSURE_FIX.md  INTERACTIVE_CONTROLS.md  LAUNCH_WINDOWS.md  QUICKSTART.md  QUICKSTART_FIXED.md  QUICK_RUN.sh  README.md  README_REACT.md  README_RUST.md  README_TESTING.md  RUN.md  TESTING.md  TESTING_WINDOWS.md  build.bat  build.sh  face-tracker-config.json  fix-cmake.sh  fix-vcpkg.ps1  launch-face-tracker-rust.ps1  launch-face-tracker-rust.sh  launch-face-tracker.ps1  main.cpp  run.sh  setup-models.sh  setup-vcpkg.ps1  test-no-sudo.sh  test.sh  vcpkg-setup.ps1
face-tracker/src/: main.rs
react-app/: .npmrc  BUILD.md  TESTING.md  build-windows.bat  build-without-ts-checks.js  index.html  package-lock.json  package.json  package.json.new  remove_timeline.ps1  setup-build.js  tsconfig.json  tsconfig.json.new  tsconfig.test.json  vite.config.ts  vite.config.ts.new  vitest.config.ts
react-app/src/: App.js  App.test.js  App.test.tsx  App.tsx  main.js  main.tsx
scripts/: api-contract-smoke.js  capture-demo-screenshots.sh  select-midi-devices.js  touchosc-workflow-smoke.js
src/: api.ts  clockManager.ts  core.ts  faceTrackerService.ts  fixturesPersistence.ts  index.ts  logger.ts  server.ts  standalone-server.ts
src/types/: global.d.ts
website/: README.md  index.html  script.js  styles.css
(+584 files in other folders)
