[package]
name = "face-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = { version = "0.97", default-features = false, features = ["imgproc", "objdetect", "videoio", "highgui", "imgcodecs"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

